<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brownbg"
    android:orientation="vertical"
    tools:context=".Fragment.AboutFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:orientation="vertical">
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_marginTop="@dimen/_10sdp"-->
<!--            android:layout_marginBottom="@dimen/_20sdp"-->
<!--            android:text="@string/about_me"-->
<!--            android:textStyle="bold"-->
<!--            android:textColor="@color/brown"-->
<!--            android:textSize="25sp"-->
<!--            android:textAlignment="center"/>-->
        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:src="@drawable/about"/>
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/my_biodata"-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="@color/brown"-->
<!--            android:textSize="18sp"-->
<!--            android:textStyle="bold"/>-->

        <TableLayout
            android:id="@+id/tabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="2dp"
            android:background="@color/brownbg">

            <TableRow
                android:background="@color/brownbg"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/row_nama"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/brown" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/row_nim"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/brown" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/row_email"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/brown" />

            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@color/brownbg"
                    android:layout_margin="1dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nim"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@color/brownbg"
                    android:layout_margin="1dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@color/brownbg"
                    android:layout_margin="1dp"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_300sdp"
        android:layout_gravity="end"
        android:layout_marginEnd="-7dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/tiga" />
</LinearLayout>