<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/brownbg"
    tools:context=".Login">

    <!-- SHAPE -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:id="@+id/shape"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:background="@drawable/shape2"
            android:elevation="4dp" />

        <View
            android:id="@+id/shape2"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_150sdp"
            android:background="@drawable/shape2"
            android:elevation="4dp" />
        <View
            android:id="@+id/shape3"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/shape2"
            android:elevation="4dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/login"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="center"
        android:layout_marginTop="-80dp"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/login2"
        android:layout_gravity="center"/>

    <!--   Username    -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:orientation="horizontal"
        android:background="@drawable/bgedit">

        <ImageView
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_gravity="center"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_menu_person"
            app:tint="@color/grey" />

        <EditText
            android:id="@+id/username"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:layout_gravity="center"
            android:background="@null"
            android:padding="@dimen/_6sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:inputType="number"
            android:hint="@string/username"
            android:textColorHint="@color/grey"
            android:autofillHints="none" />
    </LinearLayout>

    <!--    Password   -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:orientation="horizontal"
        android:background="@drawable/bgedit">

        <ImageView
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_gravity="center"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_key"
            app:tint="@color/grey" />

        <EditText
            android:id="@+id/password"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:layout_gravity="center"
            android:background="@null"
            android:padding="@dimen/_6sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@color/grey"
            android:autofillHints="none" />

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <CheckBox
        android:id="@+id/cbshow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:buttonTint="@color/brown"
        android:text="@string/show_pass"
        android:textSize="12sp"
        android:textColor="@color/brown"
        android:textStyle="italic"
        android:layout_marginTop="@dimen/_10sdp"/>
    <!--  Lupa password  -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/for_pass"
        android:textSize="12sp"
        android:textColor="@color/red"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:textAlignment="textEnd"
        android:textStyle="italic"/>
</LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/login_btn"
        android:backgroundTint="@color/brown"/>

</LinearLayout>